# LightImage

./: CMakeLists.txt  main.cpp  readme
app/include/: clipdialog.h  imagescene.h  mainwindow.h  mirrordialog.h  movedialog.h  rotatedialog.h  scaledialog.h  util.hpp
app/res/: clipdialog.ui  lightimage.qrc  mainwindow.ui  mirrordialog.ui  movedialog.ui  rotatedialog.ui  scaledialog.ui
app/src/: clipdialog.cpp  imagescene.cpp  main.cpp  mainwindow.cpp  mirrordialog.cpp  movedialog.cpp  rotatedialog.cpp  scaledialog.cpp
include/: LightImage.h
modules/color/include/: color.h
modules/color/src/: color.cpp
modules/core/include/: core.hpp  error.hpp  image.h  matrix.h  matrix.hpp  point.hpp  types.h  vect.hpp
modules/core/src/: image.cpp  matrix.cpp
modules/filter/include/: filter.h
modules/filter/src/: filter.cpp
modules/frequency_domain_transform/include/: dct.h  dft.h
modules/frequency_domain_transform/src/: dct.cpp  dft.cpp
modules/geometry_transform/include/: geometry.h
modules/geometry_transform/src/: geometry.cpp
modules/histogram/include/: histogram.h
modules/histogram/src/: histogram.cpp
modules/io/include/: io.h
modules/io/src/: io.cpp
